# book_opencv_cook_book

./: .gitignore  CMakeLists.txt  README.org
src/: hello_world.cc
src/ch01/: CMAkeLists.txt  draw_on_image.cc  exec1.cc  mouse_pinter_get_color.cc  poi.cc  read_and_show_img.cc  test_mat.cc
src/ch02/: CMAkeLists.txt  add_salt_noice.cc  reduce_color.cc  sharpen.cc  wave.cc
src/ch03/: CMAkeLists.txt  color_detect.cc  color_detector.cc  color_detector.hpp  color_director.hpp  detect_hsv_color.cc  detect_sky.cc  flood_fill.cc  grab_cut.cc  hsv_color.cc  hsv_color_v_to_255.cc
src/ch04/: CMAkeLists.txt  color_histogram.hpp  content_finder.cc  content_finder.hpp  histogram_1d.cc  histogram_1d.hpp  t_calc_back_proj.cc  t_color_histogram.cc  t_equalizeHist.cc  t_histogram.cc  t_term_creteria.cc
src/images/stopSamples/: neg.txt  stop.txt  trainStop.bat
src/images/stopSamples/classifier/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml
